--- a/static/css/sass/style.scss
+++ b/static/css/sass/style.scss
@@ -40,6 +40,12 @@
 // @import "foundation/components/tooltips";
 // @import "foundation/components/dropdown";
 
+body{
+margin: 0px;
+padding: 0px;
+background: #F3F2ED;
+}
+
 #osl-information {
 	width:100%;
 	background: #424242; /*#332E2C url('/theme/img/dark-concrete.jpg') repeat;*/
@@ -93,9 +99,9 @@ footer a:visited {
 Ganeti Web Manager Styles
 * * * */
 
-body {
+/*body {
 	background:url('/theme/img/paper.jpg') repeat;
-}
+}*/
 header {
 	@extend .large-12, .small-12, .columns;
 	background: #5D87A1; /*#294562 url('/theme/img/concrete.jpg') repeat;*/
@@ -145,11 +151,7 @@ header {
 	text-align:right;
 }
 
-#donate {
-	@extend .large-1, .columns;
-}
-
-#download {
+.download {
 	@extend .large-3, .columns;
 	text-align:right;
 	color:#000000;
@@ -157,7 +159,7 @@ header {
 	font-size: 16px;
 }
 
-#download p {
+.download p {
 font-family: "crete round", serif;
 	font-size:.7em;
 	padding:0px;
@@ -176,11 +178,13 @@ header h1 {
 	margin-top:emCalc(-32px);
 	position:relative;
 	z-index:99;
+	width: 80vw;
+	max-width: 80em;
 }
 
 #welcome-message {
 	@extend .large-9, .small-12, .columns;
-	border:1px solid #eaeaea;
+	border:2px solid #ddd;
 	background:#fff;
 	padding:2em;
 	min-height:600px;
@@ -215,10 +219,21 @@ header h1 {
 	padding-right:0px;
 }
 
+/*Sidebar Styles*/
 .sidebar {
 	float: left;
 	padding-top:emCalc(48px);
 	@extend .large-3, .small-12, .columns;
+	background: #424242;
+}
+.sidebar h5{
+	color: #fff;
+	font-family: 'crete round', serif;
+	font-size: 24px;
+}
+.sidebar p{
+	font-family: 'crete round', serif;
+	color: #fff;
 }
 
 .download-button {
@@ -235,6 +250,9 @@ header h1 {
 .download-button:hover,
 .download-button:focus{
 	background: #D55503; /*#DF5F0D;*/	 
+}
+.download-button:active{
+	box-shadow: 0px 0px 5px 1px black;
 }
 
 a.download-button:link,
@@ -289,14 +307,19 @@ footer p {
 }
 
 #osu-logo {
-	@extend .large-1, .columns;
+	@extend .large-2, .columns;
+}
+#osl-logo{
+	height: auto;
+	width: 100%;
+	display: inline-block;
 }
 
 #osuosl-logo {
 	@extend .large-2, .columns;
 }
 
-#donate {
+.donate {
 	@extend .large-2, .columns;
 	text-align:right;
 }
@@ -340,6 +363,13 @@ h4 a:hover {
 	list-style:square;
 }
 
+.headertext{
+	font-family: 'Crete round', serif;
+	font-size: 16px;
+	text-align: center;
+	margin: auto 0;
+	vertical-align: middle;
+}
 
 ol {
 	padding:0 0 0 emCalc(25px);
@@ -364,7 +394,15 @@ iframe {
 	width:100%;
 }
 
+@media screen and (max-width: 1200){
+	.githubfork{
+	display:none;
+}
+}
 @media only screen and (max-width: 48em) {
+	body{
+	text-align: center;
+}
 	footer {
 	margin:0px;
 	padding:20px 0;
@@ -375,23 +413,19 @@ iframe {
 	line-height:2;
 	}
 
-	#download {
+	.download {
 	text-align:center;
 	padding:16px 0 0 0;
 	line-height:3;
 	}
 
-	#download p {
+	.download p {
 	font-size:1.2em;
 	}
 
 	#footer-text {
 	text-align:center;
 	padding:16px 0 0 0;
-	}
-
-	#donate {
-	text-align:center;
 	}
 
 	#osu-logo {
@@ -407,10 +441,4 @@ iframe {
 	}
 
 }
-.headertext{
-font-family: 'Crete round', serif;
-font-size: 16px;
-text-align: center;
-margin: auto 0;
-vertical-align: middle;
-}
+
