fixing fork-me for responsive design

--- a/static/css/sass/style.scss
+++ b/static/css/sass/style.scss
@@ -394,7 +394,7 @@ iframe {
 	width:100%;
 }
 
-@media screen and (max-width: 1200){
+@media screen and (max-width: 1200px){
 	.githubfork{
 	display:none;
 }
