--- a/static/css/sass/style.scss
+++ b/static/css/sass/style.scss
@@ -41,94 +41,86 @@
 // @import "foundation/components/dropdown";
 
 body{
-margin: 0px;
-padding: 0px;
-background: #F3F2ED;
+    margin: 0px;
+    padding: 0px;
+    background: #F3F2ED;
 }
+
+/*Page banner CSS*/     
 
 #osl-information {
-	width:100%;
-	background: #424242; /*#332E2C url('/theme/img/dark-concrete.jpg') repeat;*/
-	padding:emCalc(12px) 0;
-	border-bottom:1px solid #181514;
-	color:#fff;
-}
-
-footer a:link,
-footer a:active,
-footer a:visited {
-	color:#fff;
+    width:100%;
+    background: #424242; /*#332E2C url('/theme/img/dark-concrete.jpg') repeat;*/
+    padding:emCalc(12px);
+    border-bottom:1px solid #181514;
+    color:#fff;
 }
 
 #osl-information-container {
-	@extend .row;
-	text-align:right;
+    @extend .row;
+    text-align:right;
 }
 
 #osl-logo {
-	@extend .large-12, .columns;
-	font-size:.7em;
+    @extend .large-12, .columns;
+    font-size:.7em;
 }
 
 #osl-logo img {
-	display:inline;
-	margin-left:emCalc(8px);
+    display:inline;
+    margin-left:emCalc(8px);
 }
 
-#osl-information a:link{
-	color: #F37321;
+.osl-link{
+    color: #F37321;
 }
 
+/*Other links Stylings*/
 #other-links {
-	@extend .large-11, .columns;
+    @extend .large-11, .columns;
 }
 
 #other-links ul {
-	display:inline;
-	padding:0px;
-	margin:0px;
+    display:inline;
+    padding:0px;
+    margin:0px;
 }
 
 #other-links ul li {
-	display:inline;
-	padding:0px;
-	margin:0px emCalc(8px) 0px 0px;
+    display:inline;
+    padding:0px;
+    margin:0px emCalc(8px) 0px 0px;
 }
 
-/* * * *
-Ganeti Web Manager Styles
-* * * */
+/*Header and main navigation CSS*/
 
-/*body {
-	background:url('/theme/img/paper.jpg') repeat;
-}*/
-header {
-	@extend .large-12, .small-12, .columns;
-	background: #5D87A1; /*#294562 url('/theme/img/concrete.jpg') repeat;*/
-	float:none;
-	padding-top:emCalc(32px);
-	padding-bottom:emCalc(64px);
+.page-header {
+    @extend .large-12, .small-12, .columns;
+    background: #5D87A1; /*#294562 url('/theme/img/concrete.jpg') repeat;*/
+    float:none;
+    padding-top:emCalc(32px);
+    padding-bottom:emCalc(64px);
 }
 
 .logo {
-	@extend .large-3, .columns;
+    @extend .large-3, .columns;
 }
 
 .navigation {
-	@extend .large-6, .columns;
-	padding-top:emCalc(20px);
+    @extend .large-4, .columns;
+    padding-top:emCalc(20px);
 }
 
 .navigation ul {
-	margin:0px;
-	list-style:none;
-	display:inline;
+    margin:0px;
+    list-style:none;
+    display:inline;
 }
 
 .navigation ul li,
 .footer-navigation ul li {
-	display:inline;
-	margin:0px emCalc(12px) 0px 0px;
+    display:inline;
+    margin:0px emCalc(12px) 0px 0px;
 }
 
 .navigation ul li a:link,
@@ -137,213 +129,219 @@ header {
 .footer-navigation ul li a:link,
 .footer-navigation ul li a:active,
 .footer-navigation ul li a:visited {
-	color:#fff;
-	text-decoration:none;
+    color:#fff;
+    text-decoration:none;
 }
 
 .navigation ul li a:hover,
 .footer-navigation ul li a:hover {
-	text-decoration:underline;
+    text-decoration:underline;
 }
 
 #footer-text {
-	@extend .large-4, .columns;
-	text-align:right;
+    @extend .large-4, .columns;
+    text-align:right;
 }
 
 .download {
-	@extend .large-3, .columns;
-	text-align:right;
-	color:#000000;
-	font-family: "crete round", serif;
-	font-size: 16px;
+    @extend .large-3, .columns;
+    color:#000000;
+    font-family: "crete round", serif;
+    font-size: 16px;
+    margin: 10px;
+    padding: 0px;
+    width: auto;
+    text-align: center;
 }
 
 .download p {
-font-family: "crete round", serif;
-	font-size:.7em;
-	padding:0px;
-	margin:0px;
-	color: #000000;
+    font-family: "crete round", serif;
+    font-size:.7em;
+    padding:0px;
+    margin:0px;
+    color: #000000;
 }
 
-header h1 {
-	color:#fff;
-	letter-spacing:-.03em;
-	font-weight:normal;
+.page-header h1 {
+    color:#fff;
+    letter-spacing:-.03em;
+    font-weight:normal;
 }
+
+/*Main content CSS*/
 
 .main-content {
-	@extend .row;
-	margin-top:emCalc(-32px);
-	position:relative;
-	z-index:99;
-	width: 80vw;
-	max-width: 80em;
+    @extend .row;
+    margin-top:emCalc(-32px);
+    position:relative;
+    z-index:99;
+    width: 80vw;
+    max-width: 80em;
 }
 
 #welcome-message {
-	@extend .large-9, .small-12, .columns;
-	border:2px solid #ddd;
-	background:#fff;
-	padding:2em;
-	min-height:600px;
+    @extend .large-9, .small-12, .columns;
+    border:2px solid #ddd;
+    background:#fff;
+    padding:2em;
+    min-height:600px;
 }
 
 #welcome-image {
-	padding:emCalc(16px) 0 emCalc(16px) 0;	
-	width:100%;
-	clear:both;
+    padding:emCalc(16px) 0 emCalc(16px) 0;	
+    width:100%;
+    clear:both;
 }
 
 #welcome-image small {
-	font-size:.7em;
-	color:#46413D;
-	margin:0px;
-	padding:0px;
+    font-size:.7em;
+    color:#46413D;
+    margin:0px;
+    padding:0px;
 }
 
 #welcome-header {
-	@extend .large-9, .columns;
-	padding-left:0px;
-	padding-right:0px;
+    @extend .large-9, .columns;
+    padding-left:0px;
+    padding-right:0px;
 }
 
 #contact-panel {
-	@extend .large-3, .columns;
-	padding-left:0px;
+    @extend .large-3, .columns;
+    padding-left:0px;
 }
 
 #screenshots {
-	@extend .large-9, .columns;
-	padding-right:0px;
+    @extend .large-9, .columns;
+    padding-right:0px;
 }
 
 /*Sidebar Styles*/
 .sidebar {
-	float: left;
-	padding-top:emCalc(48px);
-	@extend .large-3, .small-12, .columns;
-	background: #424242;
+    float: left;
+    padding-top:emCalc(48px);
+    @extend .large-3, .small-12, .columns;
+    background: #424242;
 }
 .sidebar h5{
-	color: #fff;
-	font-family: 'crete round', serif;
-	font-size: 24px;
+    color: #fff;
+    font-family: 'crete round', serif;
+    font-size: 24px;
+    text-align: center;
 }
 .sidebar p{
-	font-family: 'crete round', serif;
-	color: #fff;
+    font-family: 'crete round', serif;
+    color: #fff;
 }
 
 .download-button {
-	@extend .button, .success;
-	margin:emCalc(6px) 0px;
-	background: #F37321;
-	border-radius: 15px;
-	-moz-border-radius: 15px;
-	-webkit-border-radius: 15px;
-	border: 2px solid black;
-	
+    @extend .button, .success;
+    margin:emCalc(6px) 0px;
+    background: #8194a1;
+    border-radius: 15px;
+    -moz-border-radius: 15px;
+    -webkit-border-radius: 15px;
+    border: 2px solid black;
+
 
 }
 .download-button:hover,
 .download-button:focus{
-	background: #D55503; /*#DF5F0D;*/	 
+    background: #5d87a1; /*#DF5F0D;*/	 
 }
 .download-button:active{
-	box-shadow: 0px 0px 5px 1px black;
+    box-shadow: 0px 0px 5px 1px black;
 }
 
 a.download-button:link,
 a.download-button:active,
 a.download-button:visited {
-	text-decoration:none;
-	color: #000000;
+    text-decoration:none;
+    color: #000000;
 }
 
 .code {
-	margin:emCalc(8px) 0;
-	background:#ddd;
-	padding:emCalc(8px);
-	font-family:monospace, serif;
-	color:#000;
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
-	border-radius: 10px; /* future proofing */
-	-khtml-border-radius: 10px; /* for old Konqueror browsers */
+    margin:emCalc(8px) 0;
+    background:#ddd;
+    padding:emCalc(8px);
+    font-family:monospace, serif;
+    color:#000;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px; /* future proofing */
+    -khtml-border-radius: 10px; /* for old Konqueror browsers */
 }
 
 .code p {
-	padding:0px;
-	color:#fff;
+    padding:0px;
+    color:#fff;
 }
 
 p.pre-header {
-	padding:0px;
-	margin:0px;
+    padding:0px;
+    margin:0px;
 }
 
 p.pre-header a:link,
 p.pre-header a:active,
 p.pre-header a:visited,
 p.pre-header a:hover {
-	text-decoration:none;
-	color:#333;
+    text-decoration:none;
+    color:#333;
 }
 
 #getting-started h3 {
-	color:#fff;
+    color:#fff;
 }
 
 footer {
-	background: #424242; /*#332E2C url('/theme/img/dark-concrete.jpg') repeat;*/
-	padding:emCalc(64px) 0 emCalc(32px) 0;
-	margin-top:emCalc(-32px)
+    background: #424242; /*#332E2C url('/theme/img/dark-concrete.jpg') repeat;*/
+    padding:emCalc(64px) 0 emCalc(32px) 0;
+    margin-top:emCalc(-32px)
 }
 
 footer p {
-	color:#fff;
+    color:#fff;
 }
 
 #osu-logo {
-	@extend .large-2, .columns;
+    @extend .large-2, .columns;
 }
 #osl-logo{
-	height: auto;
-	width: 100%;
-	display: inline-block;
+    height: auto;
+    width: 100%;
+    display: inline-block;
 }
 
 #osuosl-logo {
-	@extend .large-2, .columns;
+    @extend .large-2, .columns;
 }
 
 .donate {
-	@extend .large-2, .columns;
-	text-align:right;
+    @extend .large-2, .columns;
+    text-align:right;
 }
 
 /* * * *
 Typography
-* * * */
+ * * * */
 a:link,
 a:active,
 a:visited {
-	text-decoration:underline;
+    text-decoration:underline;
 }
 
 .byline {
-	text-transform:uppercase;
-	color:#777;
-	font-size:.9em;
+    text-transform:uppercase;
+    color:#777;
+    font-size:.9em;
 }
 
 button a:link,
 button a:active,
 button a:visited {
-	text-decoration:none;
-	color: #000000;
+    text-decoration:none;
+    color: #000000;
 }
 
 h3 a:link,
@@ -354,91 +352,97 @@ h4 a:link,
 h4 a:active,
 h4 a:visited,
 h4 a:hover {
-	text-decoration:none;
+    text-decoration:none;
 }
 
 .main-content ul{
-	padding:0 0 0 emCalc(25px);
-	margin:0px;
-	list-style:square;
+    padding:0 0 0 emCalc(25px);
+    margin:0px;
+    list-style:square;
 }
 
 .headertext{
-	font-family: 'Crete round', serif;
-	font-size: 16px;
-	text-align: center;
-	margin: auto 0;
-	vertical-align: middle;
+    font-family: 'Crete round', serif;
+    font-size: 16px;
+    text-align: center;
+    margin: auto 0;
+    vertical-align: middle;
 }
 
 ol {
-	padding:0 0 0 emCalc(25px);
-	margin:0px;
+    padding:0 0 0 emCalc(25px);
+    margin:0px;
 }
 
 ol li {
-	padding:emCalc(16px) 0 0 0;
-	margin:0px;
+    padding:emCalc(16px) 0 0 0;
+    margin:0px;
 }
 
 ol li:first-child {
-	padding:emCalc(2px) 0 0 0;
+    padding:emCalc(2px) 0 0 0;
 }
 
 strong {
-	font-style: normal;
-	font-weight: 600;
+    font-style: normal;
+    font-weight: 600;
 }
 
 iframe {
-	width:100%;
+    width:100%;
 }
 
-@media screen and (max-width: 1200px){
-	.githubfork{
-	display:none;
-}
-}
-@media only screen and (max-width: 48em) {
-	body{
+
+
+@media only screen and (max-width: 980px) {
+    body{
 	text-align: center;
-}
-	footer {
+    }
+    footer {
 	margin:0px;
 	padding:20px 0;
-	}
+    }
 
-	#osl-information-container {
+    #osl-information-container {
 	text-align:left;
 	line-height:2;
-	}
+    }
 
-	.download {
+    .download {
 	text-align:center;
 	padding:16px 0 0 0;
 	line-height:3;
-	}
+    }
 
-	.download p {
+    .download p {
 	font-size:1.2em;
-	}
+    }
 
-	#footer-text {
+    #footer-text {
 	text-align:center;
 	padding:16px 0 0 0;
-	}
+    }
 
-	#osu-logo {
+    #osu-logo {
 	padding-bottom:16px;
-	}
+    }
 
-	.logo {
+    .logo {
 	text-align:center;
-	}
+    }
 
-	.navigation {
+    .navigation {
 	text-align:center;
-	}
+    }
+
+    .main-content{
+    width: 95vw;}
 
 }
-
+@media only screen and (max-width: 780px){
+    .sidebar{
+	display:none;
+    }
+.row {
+text-align: center;}
+    }
