--- a/templates/base.html
+++ b/templates/base.html
@@ -92,15 +92,15 @@
         </div>
 
         <footer>
-            <div class="row">
-                <div id="osu-logo">
+            <div class="row" id="footerRow">
+                <div id="osu-logo" class="footerDiv">
                     <!--<img src="{{ SITEURL }}/theme/img/osu-logo.png" alt="Oregon State tag" />-->
-			<img src="../static/img/osu-logo.png">
+			<img src="../static/img/Simple-black_1.png">
                 </div>
 
-                <div id="osuosl-logo">
+                <div id="osuosl-logo" class="footerDiv">
                    <!-- <img src="{{ SITEURL }}/theme/img/osl-logo-white.png" alt="Open source Lab Logo" />-->
-			<img src="../static/img/osl-logo-white.png" id="osl-logo">
+			<img src="../static/img/osl-logo-white.png">
                 </div>
 
                 <div id="footer-text">
