Moving documentation to side bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,14 +33,14 @@
 		    <a href="{{ SITEURL }}"><img src="./theme/img/logo.png" alt="{{ SITENAME }} Logo" /></a>
 		</div>
 
-		<div class="navigation">	
+	<!--	<div class="navigation">	
 		    <ul>
 			<li><a href="https://ganeti-webmgr.readthedocs.org/en/latest/">Documentation</a></li>
 			{% for title, link in MENUITEMS %}
 			<li><a href="{{ link }}">{{ title }}</a></li>
 			{% endfor %}
 		    </ul>
-		</div>
+		</div>-->
 
 		<div class="download">
 		    <a href="#" class="download-button">Download</a>
@@ -58,9 +58,9 @@
 
 	<div class="main-content">
 	    <div class="sidebar">
-	<!--	<h5>Documentation</h5>
-		<p><a href="#">Available here</a>.
-		<hr />-->
+		<h5><a href="#">Documentation</h5>
+		    <p>Available here</a></p>
+		<hr />
 		<h5>Pages</h5>
 		<ul>
 
