Trying include index.rst

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <img src=#>
 </div>
 
-{%include "index.rst" %}
+{%include 'index.rst' %}
 
 <p class="pre-header"><a href="{{ SITEURL }}/archives.html">{{ SITENAME }} Updates</a></p>
 {% if articles %}
