Trying 'for page in index'

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 </div>
 {% for page in INDEX %}
 {{ page.content }}
+{% endfor %}
 
 <p class="pre-header"><a href="{{ SITEURL }}/archives.html">{{ SITENAME }} Updates</a></p>
 {% if articles %}
