Modifying navigations: putting pages in sidebar instead of in head banner

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,9 +36,9 @@
 	<!--	<div class="navigation">	
 		    <ul>
 			<li><a href="https://ganeti-webmgr.readthedocs.org/en/latest/">Documentation</a></li>
-			{% for title, link in MENUITEMS %}
+			{#{% for title, link in MENUITEMS %}
 			<li><a href="{{ link }}">{{ title }}</a></li>
-			{% endfor %}
+			{% endfor %}#}
 		    </ul>
 		</div>-->
 
@@ -58,8 +58,8 @@
 
 	<div class="main-content">
 	    <div class="sidebar">
-		<h5><a href="#">Documentation</h5>
-		    <p>Available here</a></p>
+		<h5>Documentation</h5>
+		<p><a href = "#">Available here</a></p>
 		<hr />
 		<h5>Pages</h5>
 		<ul>
