Redoing page layout, modifying banner

--- a/static/css/sass/style.scss
+++ b/static/css/sass/style.scss
@@ -51,12 +51,15 @@ body{
 
 #osl-information {
     width:100%;
-    background: #424242; /*#332E2C url('/theme/img/dark-concrete.jpg') repeat;*/
+    /*background: #424242; #332E2C url('/theme/img/dark-concrete.jpg') repeat;*/
     padding:emCalc(12px);
     border-bottom:1px solid #181514;
-    color:#fff;
+    color:#424242;
     position:relative;
+	height: 5vh;
+	min-height: 50px;
 }
+
 #osl-information a{
 text-decoration: none;
 transition: .5s;
@@ -106,11 +109,13 @@ color: #F3CEBB;
     @extend .large-12, .small-12, .columns;
     background: #5D87A1; /*#294562 url('/theme/img/concrete.jpg') repeat;*/
     //float:none;
-    padding-top:emCalc(32px);
-    padding-bottom:emCalc(64px);
+    padding-top:emCalc(16px);
+    padding-bottom:emCalc(16px);
     top:0px;
-position:relative;
-z-index:99;
+	position:relative;
+	z-index:99;
+	height: 15vh;
+	min-height: 140px;
 }
 
 .logo {
@@ -162,7 +167,9 @@ transition: .5s;
     padding: 0px;
     width: auto;
     text-align: center;
-display:inline-block;}
+display:inline-block;
+	float:right;
+}
 
 .download p {
     font-family: "crete round", serif;
@@ -209,6 +216,73 @@ a.download-button:visited {
     color: #ffffff;
 }
 
+/*Index page Styles*/
+.indexpage{
+	clear:both;
+	margin:0px;
+	padding: 0px;
+	height: 100px;
+	width: 100%;
+	position: relative;
+	display:table;
+}
+
+#indexpage{
+	background: #424242;
+	width: 100%;
+	margin: 0px;
+	padding: 0px;
+	text-align: center;
+	height: 70vh;
+	min-height: 500px;
+}
+
+#indexpage p{
+	font-family: 'crete round', serif;
+	color: #fff;
+	font-size: 24px;
+	padding: 20px;
+	width: 30%;
+	margin: 0px;
+	display: inline-block;
+}
+
+#downloadRibbon{
+	width: 100%;
+	height: 10vh;
+	min-height: 90px;
+	background: #5D87A1;
+	text-align: center;
+	margin: 0px;
+	padding: 0px;
+}
+
+#downloadRibbon h2{
+	margin: 0px;
+	padding: 0px;
+	line-height: 100px;
+	font-family: 'crete round', serif;
+	font-size: 64px;
+	vertical-align: middle;
+	display:inline-block;
+}
+
+#downloadRibbon a{
+	color: #fff;
+	text-decoration: none;
+	transition: .5s;
+}
+
+#downloadRibbon a:hover{
+	color: #ee5d1a;
+}
+
+#downloadRibbon img{
+	height: 70%;
+	vertical-align: middle;
+	padding: 10px;
+}
+
 /*Main content CSS*/
 
 .main-content {
@@ -224,12 +298,18 @@ a.download-button:visited {
     border:2px solid #ddd;
     background:#fff;
     padding:2em;
-min-height:600px;}
+min-height:600px;
+}
 
 #welcome-image {
-    padding:emCalc(15px) 0 emCalc(16px) 0;	
-    width:100%;
+    padding:emCalc(64px) 0 emCalc(64px) 0;	
+    width:60%;
     clear:both;
+	max-width: 1080px;
+	margin-right: auto;
+	margin-left: auto;
+	height:auto;
+	display: inline-block;
 }
 
 #welcome-image small {
@@ -272,11 +352,14 @@ min-height:600px;}
     font-family: 'crete round', serif;
     color: #fff;
     font-size: 1.2em;
+    text-align: center;
 }
 .sidebar a{
     color: #ee5d1a;
     text-decoration: none !important;
-transition: .5s;}
+transition: .5s;
+	text-align: center;
+}
 
 .sidebar a:hover{
     color: #F3CEBB;
@@ -368,7 +451,8 @@ Typography
 a:link,
 a:active,
 a:visited {
-    text-decoration:underline;
+    text-decoration:none;
+
 }
 
 .byline {
@@ -396,7 +480,7 @@ h4 a:hover {
 }
 
 .main-content ul{
-    padding:0 0 0 emCalc(25px);
+    padding:0;
     margin:0px;
     list-style: none;
 }
